# benchmark

benchmark/: Cargo.toml  benchmark.js  package-lock.json  package.json  server.js
benchmark/public/: client.js  index.html  style.css
benchmark/src/: benchmark.rs  decode.rs  main.rs
python/: main.py
rust/: Cargo.toml
rust/src/: bitmap_image_header.rs  main.rs
