[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
actix-web = "4"
actix-files = "0.6.6"
actix-ws = "0.3.0"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["fs"] }
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
